laborations/lab2/testsuite/good/div.cc
int main() {
  printInt(5 / 3);
  return 0;
}
