laborations/lab2/testsuite/bad/cmp-while-int-eq-double.cc
int main () {
	while (3 == 3.0) {}	
	return 0;
}
